<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="1702dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView1"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="27dp"
            android:text="@string/help_description" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_alignLeft="@+id/textView7"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/desc_help_screen_1"
            android:src="@drawable/main2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView1"
            android:layout_below="@+id/imageView1"
            android:layout_marginTop="30dp"
            android:text="@string/help_main_activity" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="23dp"
            android:contentDescription="@string/desc_help_screen_2"
            android:src="@drawable/author_mode" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_below="@+id/imageView2"
            android:layout_marginTop="29dp"
            android:text="@string/help_action_bar" />

        <Button
            android:id="@+id/Read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="55dp"
            android:text="@string/button_read_existing_story" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="30dp"
            android:text="@string/help_how_to" />

        <Button
            android:id="@+id/CreateNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Read"
            android:layout_below="@+id/Read"
            android:layout_marginTop="16dp"
            android:text="@string/button_help_create_new_story" />

        <Button
            android:id="@+id/youtube_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/goOnline"
            android:layout_marginTop="16dp"
            android:text="@string/button_help_youtube" />

        <Button
            android:id="@+id/goOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/CreateNew"
            android:layout_below="@+id/CreateNew"
            android:layout_marginTop="17dp"
            android:text="@string/button_help_download_stories" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/youtube_video"
            android:layout_marginTop="18dp"
            android:text="@string/help_screen_edit_story" />
    </RelativeLayout>

</ScrollView>