<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="654dp"
    android:padding="6dip"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FragmentEditActivity" >

    <ListView
        android:id="@+id/fragmentViewPartList"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/fragmentTitleText" >
    </ListView>

    <TextView
        android:id="@+id/fragmentTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:textSize="20sp"
        android:textStyle="bold" />

    <HorizontalScrollView
        android:id="@+id/HorizontalScrollView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1" >

        <LinearLayout
            android:layout_width="689dp"
            android:layout_height="194dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/viewImage"
                android:layout_width="200dip"
                android:layout_height="130dip"
                android:layout_weight="1"
                android:contentDescription="@string/annotation_1"
                android:src="@android:drawable/ic_menu_gallery" />

            <ImageView
                android:id="@+id/viewImage2"
                android:layout_width="200dip"
                android:layout_height="130dip"
                android:layout_weight="1"
                android:contentDescription="@string/annotation_2"
                android:src="@android:drawable/ic_menu_gallery" />

            <ImageView
                android:id="@+id/viewImage3"
                android:layout_width="200dip"
                android:layout_height="130dip"
                android:layout_weight="1"
                android:contentDescription="@string/annotation_3"
                android:src="@android:drawable/ic_menu_gallery" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/HorizontalScrollView01"
        android:layout_below="@+id/fragmentViewPartList"
        android:text="@string/annotations_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>